# atsa

./: README.md  meson.build  open_file_old.c  org.nam.atsa.json  org.nam.atsa.json~
data/: meson.build  org.nam.atsa.desktop.in  org.nam.atsa.gschema.xml  org.nam.atsa.metainfo.xml.in  org.nam.atsa.service.in
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: atsa-application.c  atsa-application.h  atsa-test-window.c  atsa-test-window.h  atsa-window.c  atsa-window.h  atsa-window.ui  atsa.gresource.xml  main.c  meson.build
